fix(style): fix add button z-index

--- a/src/App/components/ToDo/components/Content/View.module.scss
+++ b/src/App/components/ToDo/components/Content/View.module.scss
@@ -3,6 +3,7 @@
 .buttonContainer {
   position: relative;
   button {
+    z-index: 1;
     position: fixed;
     bottom: 16px;
     right: 16px;
